# openarc-agent

./: .gitignore  CMakeLists.txt  README.md  openarc.conf  project.sh  version
include/openarc/: common-sdk.h  module-sdk.h
src/: .channel.c.swp  channel.c  channel.h  commands-pool.c  commands-pool.h  common-utils.c  common-utils.h  configuration.c  configuration.h  daemon.c  daemon.h  loop.c  loop.h  main.c  module.c  module.h  sql-queries.c  sql-queries.h  status.h  store-client.c  store-client.h  store-contact-id.c  store-contact-id.h  store-heartbeat.c  store-heartbeat.h  store-location.c  store-location.h  store-media.c  store-media.h  store.c  store.h
